docs/4.21/nodes/cma/nodes-cma-rn/nodes-cma-autoscaling-custom-rn-past.md
You can review the following release notes to learn about changes in previous versions of the Custom Metrics Autoscaler Operator.

For the current version, see [Custom Metrics Autoscaler Operator release notes](../../../nodes/cma/nodes-cma-rn/nodes-cma-autoscaling-custom-rn.xml#nodes-cma-autoscaling-custom-rn).

# Custom Metrics Autoscaler Operator 2.19.0-2 release notes

Issued: 09 July 2026

You can review the following release notes to learn about the bug fixes provided in this release of the Custom Metrics Autoscaler Operator.

The following advisory is available for the Custom Metrics Autoscaler Operator:

- [RHBA-2026:37467](https://access.redhat.com/errata/RHBA-2026:37467)

<div class="important">

Before installing this version of the Custom Metrics Autoscaler Operator, remove any previously installed Technology Preview versions or the community-supported version of Kubernetes-based Event Driven Autoscaler (KEDA).

</div>

Bug fixes
- Before this update, the addition of an immutable label in the deployment selector that was not compatible with the existing deployment was causing automatic upgrades from Custom Metrics Autoscaler Operator version 2.18.1-2 to version 2.19.0-1 to fail. With the fix, automatic upgrades from version 2.18.1-2 to version 2.19.0-2 succeed without manual intervention. ([OCPBUGS-91950](https://redhat.atlassian.net/browse/OCPBUGS-91950))

# Custom Metrics Autoscaler Operator 2.19.0-1 release notes

Issued: 17 June 2026

You can review the following release notes to learn about the bug fixes provided in this release of the Custom Metrics Autoscaler Operator.

The following advisory is available for the Custom Metrics Autoscaler Operator:

- [RHSA-2026:26636](https://access.redhat.com/errata/RHSA-2026:26636)

<div class="important">

Before installing this version of the Custom Metrics Autoscaler Operator, remove any previously installed Technology Preview versions or the community-supported version of Kubernetes-based Event Driven Autoscaler (KEDA).

</div>

New features and enhancements
Note the new features and enhancements in this release:

- Support for the `s390x` and `ppc64le` architectures

  The Operator can now run on the `s390x` and `ppc64le` architectures. Previously it ran on `amd64` or `arm64` only. ([AUTOSCALE-498](https://redhat.atlassian.net/browse/AUTOSCALE-498))

- Network policy support for the Custom Metrics Autoscaler Operator

  The Operator now has multiple network policies that control network traffic to and from the Operator and operand pods. These policies restrict traffic to only traffic that is explicitly allowed or required.

- Additional events for scaled objects and scaled jobs

  Several new events have been added for scaled objects and scaled jobs. See [ScaledObject/ScaledJob: emit more Events (KEDA PR)](https://github.com/kedacore/keda-docs/pull/1697/changes) for the new events. See the [KEDA Events reference (KEDA documentation)](https://keda.sh/docs/2.19/reference/events/) for the full list of events. ([KEDA issue 7347](https://github.com/kedacore/keda/issues/7347))

- New status field for scaled objects and scaled jobs

  A new `TriggersActivity` status field in scaled objects and scaled jobs reports the activity of each trigger in that object or job. Having per-activity tracking helps you understand which trigger is active and which is not. ([KEDA issue 7382](https://github.com/kedacore/keda/issues/7382))

- New metric is now included in the raw metrics

  A new metric has been added to the raw metrics stream that reports the current activity status of the triggers in a scaled object or scaled job. This metric indicates if the metric for the trigger is active, that is, above the `activationThreshold` value. This metric can help make the scaling decisions between KEDA and the metric consumer more consistent. ([KEDA issue 7369](https://github.com/kedacore/keda/issues/7369))

Bug fixes
- Before this update, the `accurateScalingStrategy` function in a scaled job was not considering the `pendingJobCount` value when checking if the `maxReplicaCount` value would be exceeded. This caused redundant idle jobs. With this release, this issue has been resolved and no longer causes redundant jobs. ([KEDA bug 7329](https://github.com/kedacore/keda/pull/7329))

- Before this update, if the Azure Event Hub did not return partition information in the offset response, the Operator was accessing partition offsets without checking if the partitions exist. This caused incorrect lag calculations, which caused the Kafka scaler to error out. With this release, lag calculation treats missing partitions as having `0` lag instead of returning an error, resolving this issue. ([KEDA bug 7309](https://github.com/kedacore/keda/pull/7309))

# Custom Metrics Autoscaler Operator 2.18 release notes

You can review the following release notes to learn about changes in the 2.18.z releases.

## Custom Metrics Autoscaler Operator 2.18.1-2 release notes

Issued: 09 February 2026

You can review the following release notes to learn about the bug fixes provided in this release of the Custom Metrics Autoscaler Operator.

This release of the Custom Metrics Autoscaler Operator 2.18.1-2 addresses Common Vulnerabilities and Exposures (CVEs). The following advisory is available for the Custom Metrics Autoscaler Operator: [RHSA-2026:2368](https://access.redhat.com/errata/RHSA-2026:2368)

<div class="important">

Before installing this version of the Custom Metrics Autoscaler Operator, remove any previously installed Technology Preview versions or the community-supported version of Kubernetes-based Event Driven Autoscaler (KEDA).

</div>

## Custom Metrics Autoscaler Operator 2.18.1-1 release notes

This release of the Custom Metrics Autoscaler Operator 2.18.1-1, which provides new features and enhancements, deprecated features, and bug fixes for running the Operator in an OpenShift Container Platform cluster, was issued on 15 January 2026. Review the following information to understand important changes in this release.

The following advisory is available for the Custom Metrics Autoscaler Operator: [RHBA-2026:0730](https://access.redhat.com/errata/RHBA-2026:0730)

<div class="important">

Before installing this version of the Custom Metrics Autoscaler Operator, remove any previously installed Technology Preview versions or the community-supported version of Kubernetes-based Event Driven Autoscaler (KEDA).

</div>

New features and enhancements
Note the new features and enhancements in this release:

- Forced activation

  You can now temporarily force the activation of a scale target by adding the `autoscaling.keda.sh/force-activation: "true"` annotation to the `ScaledObject` custom resource (CR). ([KEDA issue 6903](https://github.com/kedacore/keda/issues/6903))

- Excluding labels from being propagated to the HPA

  You can now exclude specific labels from being propagated to a Horizontal Pod Autoscaler (HPA) by using the `scaledobject.keda.sh/hpa-excluded-labels` annotation to the `ScaledObject` or `ScaledJob` CR. ([KEDA issue 6849](https://github.com/kedacore/keda/issues/6849))

- Pause in scaling down

  You can now pause the scaling down of an object without preventing the object from scaling up. ([KEDA issue 6902](https://github.com/kedacore/keda/issues/6902))

- Pause in scaling up

  You can now pause the scaling up for an object without preventing the object from scaling down. ([KEDA issue 7022](https://github.com/kedacore/keda/issues/7022))

- Support for the s390x architecture

  The Operator can now run on `s390x` architecture. Previously it ran on `amd64`, `ppc64le`, or `arm64`. ([KEDA issue 6543](https://github.com/kedacore/keda/issues/6543))

- Fallback for triggers of `Value` metric type

  Fallback is now supported for triggers that use the `Value` metric type. Previously, fallback was supported for only the `AverageValue` metric type. ([KEDA issue 6655](https://github.com/kedacore/keda/pull/6655))

- Support for even distribution of Kafka partitions

  You can now configure a Kafka scaler to scale Kafka consumers by partition count on the topic. This ensures that the partitions are evenly spread across all consumers. ([KEDA issue 2581](https://github.com/kedacore/keda/issues/2581))

- The Zap logger has replaced the Kubernetes logger

  The Operator now uses the Zap logging library to emit logs. ([KEDA issue 5732](https://github.com/kedacore/keda/issues/5732))

Deprecated and removed features
- For the CPU and Memory triggers, the `type` setting, deprecated in an earlier version, is removed. You must use `metricType` instead. ([KEDA bug 6698](https://github.com/kedacore/keda/pull/6698))

Bug fixes
- Before this update, a bug in the pending-pod-condition detection logic caused duplicate jobs to be created for scaled jobs that have slow-starting containers. With this release, the logic to properly evaluate each pod individually and correctly identify when a job is no longer pending. ([KEDA bug 6698](https://github.com/kedacore/keda/pull/6698))

- Before this update, if a deployment object contained an `envFrom` parameter that included a prefix setting, the prefix was ignored and the environment variable keys were added to the scaler configuration without the prefix. With this release, the prefix is now added to the environment variable key. ([KEDA bug 6728](https://github.com/kedacore/keda/issues/6728))

- Before this update, a scale client was not initialized when creating a new scale handler. This was due to a segmentation fault that occurred when accessing an uninitialized scale client in the scale handler during non-static fallback modes for specific scale target types. With this release, the issue is corrected. ([KEDA bug 6992](https://github.com/kedacore/keda/pull/6992))

- Before this update, if a user created a scaled object, the object had the `Paused` status condition of `Unknown`. With this release, the `Paused` condition is properly set to `false`. ([KEDA bug 7011](https://github.com/kedacore/keda/pull/7011))

- Before this update, after removing the `autoscaling.keda.sh/paused-replicas` from a scaled object CR, the object could still have the `Paused` status condition of `true`. With this release, this issue has been resolved and the object reports the pause status correctly. ([KEDA bug 6982](https://github.com/kedacore/keda/pull/6982))

- Before this update, when creating a scaled object with the `scaledobject.keda.sh/transfer-hpa-ownership` annotation, the object status might not list the name of the HPA that is taking ownership of the object. With this release, the HPA name is reported correctly. ([KEDA bug 6336](https://github.com/kedacore/keda/pull/6336))

- Before this update, a cron trigger incorrectly prevented scaling the replicas to 0 even if the cron schedule was inactive and the `minReplicaCount` value is `0`. This happened because the trigger always reported a metric value of `1` during its inactive periods. With this release, the cron trigger is now able to return a metric of `0`, allowing an object to scale to 0. ([KEDA bug 6886](https://github.com/kedacore/keda/pull/6886))

- Before this update, in a Kafka trigger, specifying `sasl:none` resulted in an error, despite `none` being the default value for `sasl`. With this release, you can now configure `sasl:none` in a Kafka trigger. ([KEDA bug 7061](https://github.com/kedacore/keda/pull/7061))

- Before this update, when scaling to 0, the Operator might not check if all scalers are not active. As a result, the Operator could scale an object to 0 even though there were active scalers. With this release, this issue has been resolved. ([KEDA issue 6986](https://github.com/kedacore/keda/issues/6986))

# Custom Metrics Autoscaler Operator 2.17 release notes

You can review the following release notes to learn about changes in the 2.17.z releases.

## Custom Metrics Autoscaler Operator 2.17.2-2 release notes

Issued: 21 October 2025

This release of the Custom Metrics Autoscaler Operator 2.17.2-2, which is a rebuild of the 2.17.2 version of the Custom Metrics Autoscaler Operator using a newer base image and Go compiler, was issued on 21 October 2025. There are no code changes to the Custom Metrics Autoscaler Operator.

The following advisory is available for the Custom Metrics Autoscaler Operator: [RHBA-2025:18914](https://access.redhat.com/errata/RHBA-2025:18914)

## Custom Metrics Autoscaler Operator 2.17.2 release notes

Issued: 25 September 2025

This release of the Custom Metrics Autoscaler Operator 2.17.2, which addresses Common Vulnerabilities and Exposures (CVEs), was issued on 25 September 2025. You can review the following release notes to learn about changes in this release.

The following advisory is available for the Custom Metrics Autoscaler Operator: [RHSA-2025:16124](https://access.redhat.com/errata/RHSA-2025:16124)

<div class="important">

Before installing this version of the Custom Metrics Autoscaler Operator, remove any previously installed Technology Preview versions or the community-supported version of Kubernetes-based Event Driven Autoscaler (KEDA).

</div>

New features and enhancements
Note the new features and enhancements in this release:

- The KEDA controller is automatically created during installation

  The KEDA controller is now automatically created when you install the Custom Metrics Autoscaler Operator. Previously, you needed to manually create the KEDA controller. You can edit the automatically-created KEDA controller, as needed.

- Support for the Kubernetes workload trigger

  The Cluster Metrics Autoscaler Operator now supports using the Kubernetes workload trigger to scale pods based on the number of pods matching a specific label selector.

- Support for bound service account tokens

  The Cluster Metrics Autoscaler Operator now supports bound service account tokens. Previously, the Operator supported only legacy service account tokens, which are being phased out in favor of bound service account tokens for security reasons.

Bug fixes
- Before this update, the KEDA controller did not support volume mounts. As a result, you could not use Kerberos with the Kafka scaler. With this release, the KEDA controller now supports volume mounts. ([OCPBUGS-42559](https://issues.redhat.com/browse/OCPBUGS-42559))

- Before this update, the KEDA version in the `keda-operator` deployment object log reported that the Custom Metrics Autoscaler Operator was based on an incorrect KEDA version. With this release, the correct KEDA version is reported in the log. ([OCPBUGS-58129](https://issues.redhat.com/browse/OCPBUGS-58129))

# Custom Metrics Autoscaler Operator 2.15 release notes

You can review the following release notes to learn about changes in the 2.15.z releases.

# Custom Metrics Autoscaler Operator 2.15.1-4 release notes

Issued: 31 March 2025

This release of the Custom Metrics Autoscaler Operator 2.15.1-4, which addresses Common Vulnerabilities and Exposures (CVEs), was issued on 25 September 2025. You can review the following release notes to learn about changes in this release.

The following advisory is available for the Custom Metrics Autoscaler Operator: [RHSA-2025:3501](https://access.redhat.com/errata/RHSA-2025:3501)

<div class="important">

Before installing this version of the Custom Metrics Autoscaler Operator, remove any previously installed Technology Preview versions or the community-supported version of Kubernetes-based Event Driven Autoscaler (KEDA).

</div>

New features and enhancements
Note the new features and enhancements in this release:

- CMA multi-arch builds

  With this version of the Custom Metrics Autoscaler Operator, you can now install and run the Operator on an ARM64 OpenShift Container Platform cluster.

# Custom Metrics Autoscaler Operator 2.14 release notes

You can review the following release notes to learn about changes in the 2.14.z releases.

## Custom Metrics Autoscaler Operator 2.14.1-467 release notes

This release of the Custom Metrics Autoscaler Operator 2.14.1-467 provides a CVE and a bug fix for running the Operator in an OpenShift Container Platform cluster. The following advisory is available for the Custom Metrics Autoscaler: [RHSA-2024:7348](https://access.redhat.com/errata/RHSA-2024:7348).

<div class="important">

Before installing this version of the Custom Metrics Autoscaler Operator, remove any previously installed Technology Preview versions or the community-supported version of Kubernetes-based Event Driven Autoscaler (KEDA).

</div>

Bug fixes
- Before this update, the root file system of the Custom Metrics Autoscaler Operator pod was writable, which is unnecessary and could present security issues. With this release, the pod root file system is read-only, which addresses the potential security issue. ([OCPBUGS-37989](https://issues.redhat.com/browse/OCPBUGS-37989))

## Custom Metrics Autoscaler Operator 2.14.1-454 release notes

This release of the Custom Metrics Autoscaler Operator 2.14.1-454 provides a CVE, a new feature, and bug fixes for running the Operator in an OpenShift Container Platform cluster. The following advisory is available for the Custom Metrics Autoscaler: [RHBA-2024:5865](https://access.redhat.com/errata/RHBA-2024:5865).

<div class="important">

Before installing this version of the Custom Metrics Autoscaler Operator, remove any previously installed Technology Preview versions or the community-supported version of Kubernetes-based Event Driven Autoscaler (KEDA).

</div>

New features and enhancements
Note the new features and enhancements in this release:

- Support for the Cron trigger with the Custom Metrics Autoscaler Operator

  The Custom Metrics Autoscaler Operator can now use the Cron trigger to scale pods based on an hourly schedule. When your specified time frame starts, the Custom Metrics Autoscaler Operator scales pods to your desired amount. When the time frame ends, the Operator scales back down to the previous level.

  For more information, see "Understanding the Cron trigger".

Bug fixes
- Before this update, if you made changes to audit configuration parameters in the `KedaController` custom resource, the `keda-metrics-server-audit-policy` config map would not get updated. As a consequence, you could not change the audit configuration parameters after the initial deployment of the Custom Metrics Autoscaler. With this release, changes to the audit configuration now render properly in the config map, allowing you to change the audit configuration any time after installation. ([OCPBUGS-32521](https://issues.redhat.com/browse/OCPBUGS-32521))

# Custom Metrics Autoscaler Operator 2.13 release notes

You can review the following release notes to learn about changes in the 2.13.z releases.

## Custom Metrics Autoscaler Operator 2.13.1 release notes

This release of the Custom Metrics Autoscaler Operator 2.13.1-421 provides a new feature and a bug fix for running the Operator in an OpenShift Container Platform cluster. The following advisory is available for the Custom Metrics Autoscaler: [RHBA-2024:4837](https://access.redhat.com/errata/RHBA-2024:4837).

<div class="important">

Before installing this version of the Custom Metrics Autoscaler Operator, remove any previously installed Technology Preview versions or the community-supported version of Kubernetes-based Event Driven Autoscaler (KEDA).

</div>

New features and enhancements
Note the new features and enhancements in this release:

- Support for custom certificates with the Custom Metrics Autoscaler Operator

  The Custom Metrics Autoscaler Operator can now use custom service CA certificates to connect securely to TLS-enabled metrics sources, such as an external Kafka cluster or an external Prometheus service. By default, the Operator uses automatically-generated service certificates to connect to on-cluster services only. There is a new field in the `KedaController` object that allows you to load custom server CA certificates for connecting to external services by using config maps.

  For more information, see "Custom CA certificates for the Custom Metrics Autoscaler".

Bug fixes
- Before this update, the `custom-metrics-autoscaler` and `custom-metrics-autoscaler-adapter` images were missing time zone information. As a consequence, scaled objects with `cron` triggers failed to work because the controllers were unable to find time zone information. With this release, the image builds are updated to include time zone information. As a result, scaled objects containing `cron` triggers now function properly. Scaled objects containing `cron` triggers are currently not supported for the custom metrics autoscaler. ([OCPBUGS-34018](https://issues.redhat.com/browse/OCPBUGS-34018))

# Custom Metrics Autoscaler Operator 2.12 release notes

You can review the following release notes to learn about changes in the 2.12.z releases.

## Custom Metrics Autoscaler Operator 2.12.1-394 release notes

This release of the Custom Metrics Autoscaler Operator 2.12.1-394 provides a bug fix for running the Operator in an OpenShift Container Platform cluster. The following advisory is available for the Custom Metrics Autoscaler: [RHSA-2024:2901](https://access.redhat.com/errata/RHSA-2024:2901).

<div class="important">

Before installing this version of the Custom Metrics Autoscaler Operator, remove any previously installed Technology Preview versions or the community-supported version of Kubernetes-based Event Driven Autoscaler (KEDA).

</div>

Bug fixes
- Before this update, the `protojson.Unmarshal` function entered into an infinite loop when unmarshaling certain forms of invalid JSON. This condition could occur when unmarshaling into a message that contains a `google.protobuf.Any` value or when the `UnmarshalOptions.DiscardUnknown` option is set. With this release, the issue is resolved. ([OCPBUGS-30305](https://issues.redhat.com/browse/OCPBUGS-30305))

- Before this update, when parsing a multipart form, either explicitly with the `Request.ParseMultipartForm` method or implicitly with the `Request.FormValue`, `Request.PostFormValue`, or `Request.FormFile` method, the limits on the total size of the parsed form were not applied to the memory consumed. This could cause memory exhaustion. With this release, the parsing process now correctly limits the maximum size of form lines while reading a single form line. ([OCPBUGS-30360](https://issues.redhat.com/browse/OCPBUGS-30360))

- Before this update, when following an HTTP redirect to a domain that is not on a matching subdomain or on an exact match of the initial domain, an HTTP client would not forward sensitive headers, such as `Authorization` or `Cookie`. For example, a redirect from `example.com` to `www.example.com` would forward the `Authorization` header, but a redirect to `www.example.org` would not forward the header. With this release, the issue is resolved. ([OCPBUGS-30365](https://issues.redhat.com/browse/OCPBUGS-30365))

- Before this update, verifying a certificate chain that contains a certificate with an unknown public key algorithm caused the certificate verification process to panic. This condition affected all crypto and Transport Layer Security (TLS) clients and servers that set the `Config.ClientAuth` parameter to the `VerifyClientCertIfGiven` or `RequireAndVerifyClientCert` value. The default behavior is for TLS servers to not verify client certificates. With this release, the issue is resolved. ([OCPBUGS-30370](https://issues.redhat.com/browse/OCPBUGS-30370))

- Before this update, if errors returned from the `MarshalJSON` method contained user-controlled data, an attacker could have used the data to break the contextual auto-escaping behavior of the HTML template package. This condition would allow for subsequent actions to inject unexpected content into the templates. With this release, the issue is resolved. ([OCPBUGS-30397](https://issues.redhat.com/browse/OCPBUGS-30397))

- Before this update, the `net/http` and `golang.org/x/net/http2` Go packages did not limit the number of `CONTINUATION` frames for an HTTP/2 request. This condition could result in excessive CPU consumption. With this release, the issue is resolved. ([OCPBUGS-30894](https://issues.redhat.com/browse/OCPBUGS-30894))

## Custom Metrics Autoscaler Operator 2.12.1-384 release notes

This release of the Custom Metrics Autoscaler Operator 2.12.1-384 provides a bug fix for running the Operator in an OpenShift Container Platform cluster. The following advisory is available for the Custom Metrics Autoscaler [RHBA-2024:2043](https://access.redhat.com/errata/RHBA-2024:2043).

<div class="important">

Before installing this version of the Custom Metrics Autoscaler Operator, remove any previously installed Technology Preview versions or the community-supported version of KEDA.

</div>

Bug fixes
- Before this update, the `custom-metrics-autoscaler` and `custom-metrics-autoscaler-adapter` images were missing time zone information. As a consequence, scaled objects with `cron` triggers failed to work because the controllers were unable to find time zone information. With this release, the image builds are updated to include time zone information. As a result, scaled objects containing `cron` triggers now function properly. ([OCPBUGS-32395](https://issues.redhat.com/browse/OCPBUGS-32395))

## Custom Metrics Autoscaler Operator 2.12.1-376 release notes

This release of the Custom Metrics Autoscaler Operator 2.12.1-376 provides security updates and bug fixes for running the Operator in an OpenShift Container Platform cluster. The following advisory is available for the Custom Metrics Autoscaler Operator: [RHSA-2024:1812](https://access.redhat.com/errata/RHSA-2024:1812).

<div class="important">

Before installing this version of the Custom Metrics Autoscaler Operator, remove any previously installed Technology Preview versions or the community-supported version of KEDA.

</div>

Bug fixes
- Before this update, if invalid values such as nonexistent namespaces were specified in scaled object metadata, the underlying scaler clients would not free, or close, their client descriptors, resulting in a slow memory leak. With this release, the underlying client descriptors close when there are errors, preventing memory from leaking. ([OCPBUGS-30145](https://issues.redhat.com/browse/OCPBUGS-30145))

- Before this update, the `ServiceMonitor` custom resource (CR) for the `keda-metrics-apiserver` pod was not functioning, because the CR referenced an incorrect metrics port name of `http`. With this release, the `ServiceMonitor` CR now references the proper port name of `metrics`. As a result, the Service Monitor functions properly. ([OCPBUGS-25806](https://issues.redhat.com/browse/OCPBUGS-25806))

# Custom Metrics Autoscaler Operator 2.11 release notes

You can review the following release notes to learn about changes in the 2.11.z releases.

## Custom Metrics Autoscaler Operator 2.11.2-322 release notes

This release of the Custom Metrics Autoscaler Operator 2.11.2-322 provides security updates and bug fixes for running the Operator in an OpenShift Container Platform cluster. The following advisory is available for the Custom Metrics Autoscaler: [RHSA-2023:6144](https://access.redhat.com/errata/RHSA-2023:6144).

<div class="important">

Before installing this version of the Custom Metrics Autoscaler Operator, remove any previously installed Technology Preview versions or the community-supported version of KEDA.

</div>

Bug fixes
- Before this update, the Custom Metrics Autoscaler Operator version 3.11.2-311 was released without a required volume mount in the Operator deployment, the Custom Metrics Autoscaler Operator pod would restart every 15 minutes. With this release, the required volume mount is added to the Operator deployment. As a result, the Operator no longer restarts every 15 minutes. ([OCPBUGS-22361](https://issues.redhat.com/browse/OCPBUGS-22361))

## Custom Metrics Autoscaler Operator 2.11.2-311 release notes

This release of the Custom Metrics Autoscaler Operator 2.11.2-311 provides new features and bug fixes for running the Operator in an OpenShift Container Platform cluster. The components of the Custom Metrics Autoscaler Operator 2.11.2-311 were released in [RHBA-2023:5981](https://access.redhat.com/errata/RHBA-2023:5981).

<div class="important">

Before installing this version of the Custom Metrics Autoscaler Operator, remove any previously installed Technology Preview versions or the community-supported version of KEDA.

</div>

New features and enhancements
Note the new features and enhancements in this release:

- Red Hat OpenShift Service on AWS and OpenShift Dedicated are now supported

  The Custom Metrics Autoscaler Operator 2.11.2-311 can be installed on Red Hat OpenShift Service on AWS and OpenShift Dedicated managed clusters. Previous versions of the Custom Metrics Autoscaler Operator could be installed only in the `openshift-keda` namespace. This prevented the Operator from being installed on Red Hat OpenShift Service on AWS and OpenShift Dedicated clusters. This version of Custom Metrics Autoscaler allows installation to other namespaces such as `openshift-operators` or `keda`, enabling installation into Red Hat OpenShift Service on AWS and OpenShift Dedicated clusters.

Bug fixes
- Before this update, if the Custom Metrics Autoscaler Operator was installed and configured, but not in use, the OpenShift CLI reported the `couldn’t get resource list for external.metrics.k8s.io/v1beta1: Got empty response for: external.metrics.k8s.io/v1beta1` error after any `oc` command was entered. The message, although harmless, could have caused confusion. With this release, the `Got empty response for: external.metrics…​` error no longer appears inappropriately. ([OCPBUGS-15779](https://issues.redhat.com/browse/OCPBUGS-15779))

- Before this update, any annotation or label change to objects managed by the Custom Metrics Autoscaler were reverted by Custom Metrics Autoscaler Operator any time the Keda Controller was modified, for example after a configuration change. This caused continuous changing of labels in your objects. With this release, the Custom Metrics Autoscaler now uses its own annotation to manage labels and annotations, and annotation or label are no longer inappropriately reverted. ([OCPBUGS-15590](https://issues.redhat.com/browse/OCPBUGS-15590))

# Custom Metrics Autoscaler Operator 2.10 release notes

You can review the following release notes to learn about changes in the 2.10.z releases.

## Custom Metrics Autoscaler Operator 2.10.1-267 release notes

This release of the Custom Metrics Autoscaler Operator 2.10.1-267 provides new features and bug fixes for running the Operator in an OpenShift Container Platform cluster. The components of the Custom Metrics Autoscaler Operator 2.10.1-267 were released in [RHBA-2023:4089](https://access.redhat.com/errata/RHBA-2023:4089).

<div class="important">

Before installing this version of the Custom Metrics Autoscaler Operator, remove any previously installed Technology Preview versions or the community-supported version of KEDA.

</div>

Bug fixes
- Before this update, the `custom-metrics-autoscaler` and `custom-metrics-autoscaler-adapter` images did not contain time zone information. Because of this, scaled objects with cron triggers failed to work because the controllers were unable to find time zone information. With this release, the image builds now include time zone information. As a result, scaled objects containing cron triggers now function properly. ([OCPBUGS-15264](https://issues.redhat.com/browse/OCPBUGS-15264))

- Before this update, the Custom Metrics Autoscaler Operator would attempt to take ownership of all managed objects, including objects in other namespaces and cluster-scoped objects. Because of this, the Custom Metrics Autoscaler Operator was unable to create the role binding for reading the credentials necessary to be an API server. This caused errors in the `kube-system` namespace. With this release, the Custom Metrics Autoscaler Operator skips adding the `ownerReference` field to any object in another namespace or any cluster-scoped object. As a result, the role binding is now created without any errors. ([OCPBUGS-15038](https://issues.redhat.com/browse/OCPBUGS-15038))

- Before this update, the Custom Metrics Autoscaler Operator added an `ownerReferences` field to the `openshift-keda` namespace. While this did not cause functionality problems, the presence of this field could have caused confusion for cluster administrators. With this release, the Custom Metrics Autoscaler Operator does not add the `ownerReference` field to the `openshift-keda` namespace. As a result, the `openshift-keda` namespace no longer has a superfluous `ownerReference` field. ([OCPBUGS-15293](https://issues.redhat.com/browse/OCPBUGS-15293))

- Before this update, if you used a Prometheus trigger configured with authentication method other than pod identity, and the `podIdentity` parameter was set to `none`, the trigger would fail to scale. With this release, the Custom Metrics Autoscaler for OpenShift now properly handles the `none` pod identity provider type. As a result, a Prometheus trigger configured with authentication method other than pod identity, and the `podIdentity` parameter sset to `none` now properly scales. ([OCPBUGS-15274](https://issues.redhat.com/browse/OCPBUGS-15274))

## Custom Metrics Autoscaler Operator 2.10.1 release notes

This release of the Custom Metrics Autoscaler Operator 2.10.1 provides new features and bug fixes for running the Operator in an OpenShift Container Platform cluster. The components of the Custom Metrics Autoscaler Operator 2.10.1 were released in [RHEA-2023:3199](https://access.redhat.com/errata/RHEA-2023:3199).

<div class="important">

Before installing this version of the Custom Metrics Autoscaler Operator, remove any previously installed Technology Preview versions or the community-supported version of KEDA.

</div>

New features and enhancements
Note the new features and enhancements in this release:

- Custom Metrics Autoscaler Operator general availability

  The Custom Metrics Autoscaler Operator is now generally available as of Custom Metrics Autoscaler Operator version 2.10.1.

  <div class="important">

  Scaling by using a scaled job is a Technology Preview feature only. Technology Preview features are not supported with Red Hat production service level agreements (SLAs) and might not be functionally complete. Red Hat does not recommend using them in production. These features provide early access to upcoming product features, enabling customers to test functionality and provide feedback during the development process.

  For more information about the support scope of Red Hat Technology Preview features, see [Technology Preview Features Support Scope](https://access.redhat.com/support/offerings/techpreview/).

  </div>

- Performance metrics

  You can now use the Prometheus Query Language (PromQL) to query metrics on the Custom Metrics Autoscaler Operator.

- Pausing the custom metrics autoscaling for scaled objects

  You can now pause the autoscaling of a scaled object, as needed, and resume autoscaling when ready.

- Replica fall back for scaled objects

  You can now specify the number of replicas to fall back to if a scaled object fails to get metrics from the source.

- Customizable HPA naming for scaled objects

  You can now specify a custom name for the horizontal pod autoscaler in scaled objects.

- Activation and scaling thresholds

  Because the horizontal pod autoscaler (HPA) cannot scale to or from 0 replicas, the Custom Metrics Autoscaler Operator does that scaling, after which the HPA performs the scaling. You can now specify when the HPA takes over autoscaling, based on the number of replicas. This allows for more flexibility with your scaling policies.

# Custom Metrics Autoscaler Operator 2.8 release notes

You can review the following release notes to learn about changes in the 2.8.z releases.

## Custom Metrics Autoscaler Operator 2.8.2-174 release notes

This release of the Custom Metrics Autoscaler Operator 2.8.2-174 provides new features and bug fixes for running the Operator in an OpenShift Container Platform cluster. The components of the Custom Metrics Autoscaler Operator 2.8.2-174 were released in [RHEA-2023:1683](https://access.redhat.com/errata/RHEA-2023:1683).

<div class="important">

The Custom Metrics Autoscaler Operator version 2.8.2-174 is a [Technology Preview](https://access.redhat.com/support/offerings/techpreview/) feature.

</div>

New features and enhancements
Note the new features and enhancements in this release:

- Operator upgrade support

  You can now upgrade from a prior version of the Custom Metrics Autoscaler Operator. See "Changing the update channel for an Operator" in the "Additional resources" for information on upgrading an Operator.

- must-gather support

  You can now collect data about the Custom Metrics Autoscaler Operator and its components by using the OpenShift Container Platform `must-gather` tool. Currently, the process for using the `must-gather` tool with the Custom Metrics Autoscaler is different from that of other Operators. For more information, see "Gathering debugging data".

## Custom Metrics Autoscaler Operator 2.8.2 release notes

This release of the Custom Metrics Autoscaler Operator 2.8.2 provides new features and bug fixes for running the Operator in an OpenShift Container Platform cluster. The components of the Custom Metrics Autoscaler Operator 2.8.2 were released in [RHSA-2023:1042](https://access.redhat.com/errata/RHSA-2023:1042).

<div class="important">

The Custom Metrics Autoscaler Operator version 2.8.2 is a [Technology Preview](https://access.redhat.com/support/offerings/techpreview/) feature.

</div>

New features and enhancements
Note the new features and enhancements in this release:

- Audit Logging

  You can now gather and view audit logs for the Custom Metrics Autoscaler Operator and its associated components. Audit logs are security-relevant chronological sets of records that document the sequence of activities that have affected the system by individual users, administrators, or other components of the system.

- Scale applications based on Apache Kafka metrics

  You can now use the KEDA Apache kafka trigger/scaler to scale deployments based on an Apache Kafka topic.

- Scale applications based on CPU metrics

  You can now use the KEDA CPU trigger/scaler to scale deployments based on CPU metrics.

- Scale applications based on memory metrics

  You can now use the KEDA memory trigger/scaler to scale deployments based on memory metrics.

# Additional resources

- [Editing the Keda Controller CR](../../../nodes/cma/nodes-cma-autoscaling-custom-install.xml#nodes-cma-autoscaling-keda-controller-edit_nodes-cma-autoscaling-custom-install)

- [Understanding the Kubernetes workload trigger](../../../nodes/cma/nodes-cma-autoscaling-custom-trigger.xml#nodes-cma-autoscaling-custom-trigger-workload_nodes-cma-autoscaling-custom-trigger)

- [Understanding custom metrics autoscaler trigger authentications](../../../nodes/cma/nodes-cma-autoscaling-custom-trigger-auth.xml#nodes-cma-autoscaling-custom-trigger-auth)

- [Gathering debugging data](../../../nodes/cma/nodes-cma-autoscaling-custom-debugging.xml#nodes-cma-autoscaling-custom-debugging)
